# turncoat

./: .gitignore  CHANGELOG.md  LICENSE  flake.nix  fourmolu.yaml  turncoat.cabal
docs/: turncoat.als
src/: Turncoat.hs
test/: Main.hs
