cabal-version:   3.4
name:            turncoat
version:         0.0.0.0
synopsis:        Track unfollowers
homepage:        https://github.com/thelissimus/turncoat
license:         BSD-3-Clause
license-file:    LICENSE
author:          thelissimus
maintainer:      thelissimus@tuta.io
build-type:      Simple
extra-doc-files: CHANGELOG.md

common defaults
  default-language:   GHC2024
  default-extensions: BlockArguments

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -O2

library
  import:          warnings, defaults
  hs-source-dirs:  src
  exposed-modules: Turncoat
  build-depends:   base >=4.7 && <5

executable turncoat
  import:         warnings, defaults
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base      >=4.7 && <5
    , turncoat

test-suite turncoat-test
  import:         warnings, defaults
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base              >=4.7 && <5
    , tasty
    , tasty-hunit
    , tasty-quickcheck
    , turncoat
